--- a/ProjetoIntegrador/6-feed.html
+++ b/ProjetoIntegrador/6-feed.html
@@ -22,6 +22,16 @@
     body{
       overflow: hidden !important;
     }
+    body a{
+      text-decoration: none;
+      font-weight: bolder;
+      color: #000000;
+      font-size: 16pt;
+    }
+    body a:hover{
+      color: red;
+    }
+
   </style>
 
 </head>
@@ -61,14 +71,14 @@
                         </li>
                         
                         <li class="nav-item" style="padding: 5px 5px;">
-                            <a href="./feed1.html" style="text-decoration: none; color: red;">
+                            <a href="#" style="text-decoration: none; color: red;">
                                 <i class="bi bi-camera icons"></i></a>
                         </li>
                         <li class="nav-item mt-1">
-                            <a href="./config.html" style="text-decoration: none; color: rgb(0, 0, 0); padding: 5px 5px;"><i class="bi bi-gear icons"></i></a>
+                            <a href="/ProjetoIntegrador/5-configuracao.html" style="text-decoration: none; color: rgb(0, 0, 0); padding: 5px 5px;"><i class="bi bi-gear icons"></i></a>
                         </li>
                         <li class="nav-item mt-1">
-                            <a href="./config.html" style="text-decoration: none; color: red; padding: 5px 5px;">
+                            <a href="#" style="text-decoration: none; color: red; padding: 5px 5px;">
                                 <i class="bi bi-chat-dots icons"></i></a>
 
                         </li>
@@ -86,7 +96,7 @@
 
           <div class="card bg-black-50 border-success mb-3" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
-              <img class="img-nav img-responsive" src="./imagens/perfil.jpeg" style="width: 100px;"> zequinha_123
+              <img class="img-nav img-responsive" src="./imagens/perfil.jpeg" style="width: 100px;"><a href="/ProjetoIntegrador/7-perfil.html"> Zequinha_123</a>
             </div>
             <div class="card-body text-success" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
@@ -116,7 +126,7 @@
 
           <div class="card border-success mb-3" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
-              <img class="img-nav" src="./imagens/perfil.jpeg" style="width: 100px;"> zequinha_123
+              <img class="img-nav" src="./imagens/perfil.jpeg" style="width: 100px;"> Zequinha_123
             </div>
             <div class="card-body text-success border-black-50" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
@@ -143,7 +153,7 @@
           <div class="card border-success mb-3 caio" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
 
-              <img class="img-nav" src="./imagens/perfil.jpeg" style="width: 100px;"> zequinha_123
+              <img class="img-nav" src="./imagens/perfil.jpeg" style="width: 100px;"> <a href="/ProjetoIntegrador/7-perfil.html"> Zequinha_123</a>
             </div>
             <div class="card-body text-success" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
@@ -172,7 +182,7 @@
           <div class="card border-success mb-3 caio" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
 
-              <img class="img-nav" src="./imagens/perfil.jpeg" style="width: 100px;"> zequinha_123
+              <img class="img-nav" src="./imagens/perfil.jpeg" style="width: 100px;"> <a href="/ProjetoIntegrador/7-perfil.html"> Zequinha_123</a>
             </div>
             <div class="card-body text-success" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
@@ -199,7 +209,7 @@
           <div class="card border-success mb-3 caio" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
 
-              <img class="img-nav" src="./imagens/perfil.jpeg" style="width: 100px;"> zequinha_123
+              <img class="img-nav" src="./imagens/perfil.jpeg" style="width: 100px;"> <a href="/ProjetoIntegrador/7-perfil.html"> Zequinha_123</a>
             </div>
             <div class="card-body text-success" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
@@ -227,7 +237,7 @@
           <div class="card border-success mb-3 caio" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
 
-              <img class="img-nav" src="./imagens/perfil.jpeg" style="width: 100px;"> zequinha_123
+              <img class="img-nav" src="./imagens/perfil.jpeg" style="width: 100px;"> <a href="/ProjetoIntegrador/7-perfil.html"> Zequinha_123</a>
             </div>
             <div class="card-body text-success" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
@@ -255,7 +265,7 @@
           <div class="card border-success mb-3 caio" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
 
-              <img class="img-nav" src="./imagens/perfil.jpeg" style="width: 100px;"> zequinha_123
+              <img class="img-nav" src="./imagens/perfil.jpeg" style="width: 100px;"> <a href="/ProjetoIntegrador/7-perfil.html"> Zequinha_123</a>
             </div>
             <div class="card-body text-success" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
